# block-explorer/api/btc.go
@@ -2,16 +2,11 @@ package api
 
 import (
 	"encoding/json"
-	_ "encoding/json"
-	"fmt"
-	"log"
-	_ "log"
 	"net/http"
 
 	"github.com/btcsuite/btcd/rpcclient"
 	"github.com/farukterzioglu/btc-scraper/block-explorer/dtos"
 	"github.com/btcsuite/btcd/chaincfg/chainhash"
-	_ "github.com/farukterzioglu/btc-scraper/block-explorer/dtos"
 	"github.com/gorilla/mux"
 )
 
@@ -50,9 +45,18 @@ func (routes *BtcRoutes) RegisterBtcRoutes(r *mux.Router, p string) {
 	//   404: notFound
 	//	 500: internal
 	ur.HandleFunc("/block/{BlockID}", routes.getBlock).Methods("GET")
+
+	// swagger:route GET /btc/tx/{TxHash} BtcAPI getTransactionReq
+	// ---
+	// Returns a transaction by hash.
+	// If the transaction hash is null, Error Bad Request will be returned.
+	// responses:
+	//   200: transactionResp
+	//   404: notFound
+	//	 500: internal
+	ur.HandleFunc("/tx/{TxHash}", routes.getTransaction).Methods("GET")
 }
 
-// TODO : Implement this
 func (routes *BtcRoutes) getBlock(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	blockIDStr := params["BlockID"]
@@ -70,8 +74,6 @@ func (routes *BtcRoutes) getBlock(w http.ResponseWriter, r *http.Request) {
 		w.Write([]byte(err.Error()))
 		return
 	}
-
-	fmt.Printf("%+v\n", block) 
 
 	blockDto := dtos.BlockDto{
 		Hash:   block.Hash,
@@ -98,29 +100,57 @@ func (routes *BtcRoutes) getBlocks(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if blockCount > 10 {
-		blockCount = 10
+	blockListLenght := 10
+	if blockCount < 10 {
+		blockListLenght = int(blockCount)
 	}
 
-	blockList := make([]dtos.BlockDto, blockCount, 10)
+	blockList := make([]dtos.BlockDto, blockListLenght, 10)
 
-	for i := blockCount; i > 0; i-- {
-		blockHash, err := routes.client.GetBlockHash(i)
+	for i := 0; i < blockListLenght; i++ {
+		height := blockCount - int64(i)
+		blockHash, err := routes.client.GetBlockHash(height)
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
 			w.Write([]byte(err.Error()))
 			return
 		}
-		log.Printf("Block %d, hash: %s", i, blockHash)
 
-		blockList[blockCount-i] = dtos.BlockDto{
+		blockList[i] = dtos.BlockDto{
 			Hash:   blockHash.String(),
-			Height: i,
+			Height: height,
 		}
 	}
 
 	w.Header().Add("Content-Type", "application/json")
 	if err := json.NewEncoder(w).Encode(blockList); err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(err.Error()))
+	}
+}
+
+func (routes *BtcRoutes) getTransaction(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	txHashStr := params["TxHash"]
+
+	txHash, err := chainhash.NewHashFromStr(txHashStr)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(err.Error()))
+		return
+	}
+
+	tx, err := routes.client.GetRawTransactionVerbose(txHash)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(err.Error()))
+		return
+	}
+
+	// TODO : map tx to TransactionDto
+
+	w.Header().Add("Content-Type", "application/json")
+	if err := json.NewEncoder(w).Encode(tx); err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		w.Write([]byte(err.Error()))
 	}
